# webcraft

./: .gitignore  .npmrc  LICENSE  README.md  biome.json  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: fs_ops.rs  lib.rs  main.rs  menu.rs  pty.rs  sidecar.rs
apps/desktop/src/styles/: global.css  tokens.css
