[package]
name = "webcraft"
version = "0.1.0"
description = "WebCraft — the most advanced AI IDE ever made"
authors = ["Nicola Cucurachi <ados.labsproject@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "webcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# PTY for the integrated terminal — cross-platform (Unix + Windows ConPTY)
portable-pty = "0.9"
# Async runtime for the PTY reader threads / channels
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "io-util", "macros"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
